# agents-office-cli

./: .gitignore  README.md  agent-office.example.yaml  go.mod  go.sum
.agents/: system_prompt.md
.agents/critical_reviewer/: system_prompt.md
.agents/lead_strategist/: system_prompt.md
.agents/skills/test-token-attribution/: SKILL.md
.agents/technical_architect/: system_prompt.md
.agents/visual-assets/: README.md
.agents/visual-assets/characters/engineer/: config.json
.agents/visual-assets/characters/reviewer/: config.json
.agents/visual-assets/characters/strategist/: config.json
cmd/agent-office/: main.go  routing_test.go
cmd/agent-office/gui/: index.html
cmd/agent-office/gui/src/: activity.js  main.js  style.css
cmd/agent-office/gui/src-tauri/: Cargo.toml  tauri.conf.json
openspec/changes/archive/2026-06-10-agent-office-feature-completion/: _design_tmp.md  _proposal_tmp.md  _spec_provider_tmp.md  _tasks_tmp.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-cli-login-multi-provider/: design.md  proposal.md  tasks.md
openspec/specs/agent-management/: spec.md
openspec/specs/cli-auth-provider/: spec.md
openspec/specs/provider-model-listing/: spec.md
openspec/specs/session-usage-tracking/: spec.md
openspec/specs/skill-token-attribution/: spec.md
pkg/config/: config.go  config_test.go
pkg/workforce/: coordinator.go  coordinator_test.go  event_test.go  interruption.go  interruption_test.go  provider.go  provider_test.go  server.go  types.go
(+14 files in other folders)
