[package]
name = "agent-office-gui"
version = "0.1.0"
description = "Tauri Companion GUI for agent-office CLI"
authors = ["company"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
